Simplify the distribution of agent (#297)
* Simplify distribution

* Update README

* Fix code check