@@ -14,21 +14,22 @@
  *    limitations under the License.
  */
 
-package org.bithon.agent.plugin.jvm.jdk9;
+package org.bithon.agent.plugin.jvm.mem;
 
 import org.bithon.agent.bootstrap.expt.AgentException;
 import org.bithon.agent.core.metric.domain.jvm.MemoryRegionMetrics;
 import org.bithon.agent.plugin.jvm.JmxBeans;
-import org.bithon.agent.plugin.jvm.mem.IDirectMemoryCollector;
 
 import java.lang.management.BufferPoolMXBean;
 import java.lang.management.ManagementFactory;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 
 /**
  * @author frank.chen021@outlook.com
  * @date 2021/7/9 22:14
  */
-public class DirectMemoryCollector implements IDirectMemoryCollector {
+public class DirectMemoryCollector {
 
     private static final BufferPoolMXBean DIRECT_MEMORY_BEAN = ManagementFactory.getPlatformMXBeans(BufferPoolMXBean.class)
                                                                                 .stream()
@@ -36,22 +37,48 @@ public class DirectMemoryCollector implements IDirectMemoryCollector {
                                                                                 .findFirst()
                                                                                 .get();
 
+    private long max = 0;
+
     //
     // call the VM.maxDirectMemory in static initializer so that if the VM class does not exist, a NoClassDefFoundError will be raised
     //
-    static {
-        try {
-            jdk.internal.misc.VM.maxDirectMemory();
-        } catch (NoClassDefFoundError e) {
+    DirectMemoryCollector() throws AgentException {
+        String[][] providers = new String[][]{
+            {"sun.misc.VM", "maxDirectMemory"},
+            {"jdk.internal.misc.VM", "maxDirectMemory"}
+        };
+
+        Method maxMaxMethod = null;
+        for (String[] provider : providers) {
+            String clazz = provider[0];
+            String method = provider[1];
+            try {
+                Class<?> vmClass = Class.forName(clazz);
+                maxMaxMethod = vmClass.getDeclaredMethod(method);
+
+                // even though the method is public
+                // we call this method to trigger the InaccessibleObjectException if required argument is missing
+                maxMaxMethod.setAccessible(true);
+                max = (long) maxMaxMethod.invoke(null);
+                break;
+            } catch (ClassNotFoundException | NoSuchMethodException | IllegalAccessException | InvocationTargetException ignored) {
+            } catch (Exception e) {
+                if (e.getClass().getName().equals("java.lang.reflect.InaccessibleObjectException")) {
+                    throw new AgentException(
+                        "Bithon requires the access to VM.maxDirectMemory() to monitor the direct memory. Please add this argument(--add-exports java.base/jdk.internal.misc=ALL-UNNAMED) to your application command line to grant access.",
+                        JmxBeans.RUNTIME_BEAN.getSpecVersion());
+                }
+            }
+        }
+
+        if (maxMaxMethod == null) {
             throw new AgentException(
-                "JRE[%s], which is used to run this application, is mismatched with the JDK9+ that is used to compile Bithon. Make sure to use a matched JRE, or compile Bithon with a right JDK.",
+                "The application is running under JRE[%s]. But the VM class is not found.",
                 JmxBeans.RUNTIME_BEAN.getSpecVersion());
         }
     }
 
-    @Override
     public MemoryRegionMetrics collect() {
-        long max = jdk.internal.misc.VM.maxDirectMemory();
         long used = DIRECT_MEMORY_BEAN.getMemoryUsed();
         return new MemoryRegionMetrics(max, 0, used, max - used);
     }
